maquetado basico con bootstrap

--- a/Sucusstore-llanos/pages/productos.html
+++ b/Sucusstore-llanos/pages/productos.html
@@ -6,10 +6,57 @@
 	<title>Artículos en venta</title>
 	<link rel="shortcut icon" href="../img/favicon.png">
 	<link rel="stylesheet" href="../css/styles.css">
+	<link rel="stylesheet" href="../animaciones/animations.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg nav">
+		<div class="container-fluid">
+		<a class="navbar-brand" href="../index.html"><img src="../img/logo p1.png" alt="logo succus store"></a>
+		<div>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<button class="navbar-toggler" type="button" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="littleCart"><a class="nav-link" href="carrito.html"></a></span>
+			</button>
+		</div>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<li class="nav-item hover-underline-animation">
+				<a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+			</li>
+			<li class="nav-item dropdown hover-underline-animation">
+				<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				Productos
+				</a>
+				<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+				<li><a class="dropdown-item" href="productos.html">Suculentas</a></li>
+				<li><a class="dropdown-item" href="productos.html">Cactus</a></li>
+				<li><a class="dropdown-item" href="productos.html">Macetas</a></li>
+				<li><a class="dropdown-item" href="productos.html">Otros</a></li>
+				<li><hr class="dropdown-divider"></li>
+				<li><a class="dropdown-item" href="about-us.html">Preguntas Frecuentes</a></li>
+				<li><a class="dropdown-item" href="#">Algo</a></li>
+				</ul>
+			</li>
+			<li class="nav-item hover-underline-animation">
+				<a class="nav-link" href="../index.html#formulario">Contacto</a>
+			</li>
+			<li class="nav-item hover-underline-animation">
+				<a class="nav-link" href="cuenta.html">Cuenta</a>
+			</li>
+			<li><a href="carrito.html"><img src="../img/cart.png" alt="icono carrito de compras"></a></li>
+			</ul>
+			<form class="d-flex" role="search">
+			<input id="formFix" class="form-control me-2" type="search" placeholder="Buscá algo..." aria-label="Search">
+			<button id="formFix"class="btn btn-outline-success" type="submit">Buscar</button>
+			</form>
+		</div>
+		</div>
+  </nav>
 	<div id="bodyProductos">
-		<!--inicia nav y cartel promocional-->
+		<!--inicia nav y cartel promocional
 		<nav class="nav"><a href="../index.html">
 			<img src="../img/logo p1.png" alt="logo succus store">
 		</a>
@@ -22,6 +69,7 @@
 				<li><a href="carrito.html"><img src="../img/cart.png" alt="icono carrito de compras"></a></li>
 			</ul>
 		</nav>
+		-->
 		<div class="itemsSignStyle divStyle sign"> 
 			<h1 class="textCenter">Envíos gratis en compras superiores a 4000!!!</h1>
 		</div>
@@ -137,5 +185,6 @@
 		    </section>
 		</footer>
 	</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
