--- a/Sucusstore-llanos/pages/about-us.html
+++ b/Sucusstore-llanos/pages/about-us.html
@@ -5,26 +5,99 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sobre nosotros</title>
 	<link rel="shortcut icon" href="../img/favicon.png">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/styles.css">
+	<link rel="stylesheet" href="../animaciones/animations.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
 	<!--inicia nav y cartel promocional-->
-	<nav><a href="../index.html">
-		<img src="../img/logo p1.png" alt="logo succus store">
-	</a>
-		<ul class="textRight">
-			<li><a href="../index.html">Inicio</a>	</li>
-			<li><a href="productos.html">Productos</a></li>
-			<li><a href="about-us.html">Preguntas Frecuentes</a></li>
-			<li><a href="cuenta.html">Cuenta</a></li>
-			<li><a href="../index.html#formulario">Contacto</a></li>
+	<nav class="navbar navbar-expand-lg nav">
+		<div class="container-fluid">
+		<a class="navbar-brand" href="../index.html"><img src="../img/logo p1.png" alt="logo succus store"></a>
+		<div>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<button class="navbar-toggler" type="button" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="littleCart"><a class="nav-link" href="carrito.html"></a></span>
+			</button>
+		</div>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<li class="nav-item hover-underline-animation">
+				<a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+			</li>
+			<li class="nav-item dropdown hover-underline-animation">
+				<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				Productos
+				</a>
+				<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+				<li><a class="dropdown-item" href="productos.html">Suculentas</a></li>
+				<li><a class="dropdown-item" href="productos.html">Cactus</a></li>
+				<li><a class="dropdown-item" href="productos.html">Macetas</a></li>
+				<li><a class="dropdown-item" href="productos.html">Otros</a></li>
+				<li><hr class="dropdown-divider"></li>
+				<li><a class="dropdown-item" href="about-us.html">Preguntas Frecuentes</a></li>
+				</ul>
+			</li>
+			<li class="nav-item hover-underline-animation">
+				<a class="nav-link" href="../index.html#formulario">Contacto</a>
+			</li>
+			<li class="nav-item hover-underline-animation">
+				<a class="nav-link" href="cuenta.html">Cuenta</a>
+			</li>
 			<li><a href="carrito.html"><img src="../img/cart.png" alt="icono carrito de compras"></a></li>
-		</ul>
-	</nav>
+			</ul>
+			<form class="d-flex" role="search">
+			<input id="formFix" class="form-control me-2" type="search" placeholder="Buscá algo..." aria-label="Search">
+			<button id="formFix"class="btn btn-outline-success" type="submit">Buscar</button>
+			</form>
+		</div>
+		</div>
+  </nav>
 	<div class="itemsSignStyle divStyle"> 
 		<h1 class="textCenter">Envíos gratis en compras superiores a 4000!!!</h1>
 	</div>
 	<!--finaliza nav y cartel procional-->
+	<!--inicia carrusel de fotos-->
+	<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+		<div class="carousel-indicators">
+		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		</div>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+			  <img src="../img/plants/header2.jpg" class="d-block w-100" alt="plantas crasas">
+			  <div class="carousel-caption d-none d-md-block bg-secondary bg-opacity-50">
+				<h5 class="fs-1">Kalanchoe "Pink Butterfly"</h5>
+				<p class="fs-4">Disponible en maceta n12, n15 y bol n18</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="../img/plants/header3.jpg" class="d-block w-100" alt="plantas crasas">
+			  <div class="carousel-caption d-none d-md-block bg-secondary bg-opacity-50">
+				<h5 class="fs-1">Kalanchoe Bracteata en oferta</h5>
+				<p class="fs-4">Ver formas de envío y medios de pago</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="../img/plants/header4.jpg" class="d-block w-100" alt="plantas crasas">
+			  <div class="carousel-caption d-none d-md-block bg-secondary bg-opacity-50">
+				<h5 class="fs-1">Agaves GIGANTES</h5>
+				<p class="fs-4">Consultar tamaños y precios</p>
+			  </div>
+			</div>
+		</div>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		  <span class="visually-hidden">Previous</span>
+		</button>
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		  <span class="visually-hidden">Next</span>
+		</button>
+	</div>
 	<!--inicia texto main-->
 	<div class="objCentred"><main id="mainAboutUs">
 		<h2 class="itemsTitleStyle"> ¿Quiénes somos?</h2>
@@ -60,5 +133,6 @@
 	    		<a href="https://www.facebook.com" target="blank"><img src="../img/icon-fb-30.png" alt="facebook icon"></a>
 	    </section>
 	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
