--- a/Sucusstore-llanos/pages/cuenta.html
+++ b/Sucusstore-llanos/pages/cuenta.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Iniciar sesión/registrarse</title>
 	<link rel="shortcut icon" href="../img/favicon.png">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="stylesheet" href="../animaciones/animations.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
 	
@@ -106,35 +106,71 @@
 		</section>
 		<!--inicia formulario de registro de cuenta-->
 		<div id="form1" class="bodyPageFont textCenter">
-					<form action="envio.php" method="post" class="contactFormStyle">
-						<fieldset>
-							<legend>Crear cuenta</legend> <br>
-							<label for="nombre">Nombre</label> <br>
-							<input type="text" id="nombre" name="nombre"> <br>
-							<label for="apellido">Apellido</label> <br>
-							<input type="text" id="apellido" name="apellido"> <br>
-							<label for="email">Correo</label> <br>
-							<input type="email" id="email" name="correo"> <br>
-							<label for="contraseña">Contraseña</label> <br>
-							<input type="password" id="contraseña" name="contraseña"> <br>
-							<label for="repite contraseña">Repetir contraseña</label> <br>
-							<input type="password" id="repite contraseña" name="repite contraseña"> <br><br>
-							<input type="submit" value="enviar">
-							<input type="reset" value="cancelar">
-						</fieldset>
-					</form>
+					<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+						<h3>Crear cuenta</h3>
+						<div class="row register-form">
+									<div class="col-md-6">
+												<div class="form-group">
+													<input type="text" class="form-control" placeholder="Nombre" value="" />
+												</div>
+												<div class="form-group">
+													<input type="text" class="form-control" placeholder="Apellido" value="" />
+												</div>
+												<div class="form-group">
+													<input type="password" class="form-control" placeholder="Contraseña" value="" />
+												</div>
+												<div class="form-group">
+													<input type="password" class="form-control"  placeholder="Repetir contraseña" value="" />
+												</div>
+												<div class="mb-3 form-check text-start">
+													<input type="checkbox" class="form-check-input" id="exampleCheck1">
+													<label class="form-check-label fs-4" for="exampleCheck1">Recordarme</label>
+												</div>
+									</div>
+									<div class="col-md-6">
+												<div class="form-group">
+													<input type="email" class="form-control" placeholder="Correo" value="" />
+												</div>
+												<div class="form-group">
+													<input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control" placeholder="Teléfono" value="" />
+												</div>
+												<div class="form-group">
+													<select class="form-control">
+														<option class="hidden"  selected disabled>Localidad</option>
+														<option>CABA</option>
+														<option>AMBA</option>
+														<option>Interior</option>
+													</select>
+												</div>
+												<div class="form-group">
+													<input type="text" class="form-control" placeholder="Dirección" value="" />
+												</div>
+												<input type="submit" class="btn btn-primary fs-4"  value="Registrarse"/>
+									</div>
+						</div>
+					</div>
 		</div>
-		<div id="form2" class="bodyPageFont textCenter">
-					<form action="envio.php" method="post" class="contactFormStyle">
-						<fieldset>
-							<legend>Iniciar sesión</legend><br>
-							<label for="email">Correo</label><br>
-							<input type="email" id="email"><br>
-							<label for="contraseña">Contraseña</label><br>
-							<input type="password" id="contraseña"><br><br>
-							<input type="submit" value="Entrar">
-						</fieldset>
-					</form>
+		<div id="form2" class="bodyPageFont">
+				<div class="mb-4">
+				<h3 class="text-center">Ingresar</h3>
+				</div>
+				<form>
+				
+				<div class="mb-3">
+				  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Correo" >
+				  <div id="emailHelp" class="form-text fs-5">ejemplo@alguien.com</div>
+				</div>
+				<br>
+				<div class="mb-3">
+				  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
+				</div>
+				<div class="mb-3 form-check">
+				  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+				  <label class="form-check-label fs-4" for="exampleCheck1">Recordarme</label>
+				</div>
+				<div class="text-center">
+				<button type="submit" class="btn btn-primary fs-4">Ingresar</button></div>
+			  </form>
 		</div>
 		<!--finalizan formularios-->
 		<!--inicia footer-->
